# cmake-test

./: .gitmodules  CMakeLists.txt  Jenkinsfile
libstringdata/: CMakeLists.txt  stringdata.cpp
libstringdata/include/: stringdata.hpp
libsum/: CMakeLists.txt  sum.cpp
libsum/include/: sum.hpp
libwordsplit/: CMakeLists.txt  wordsplit.cpp
libwordsplit/include/: wordsplit.hpp
wc/: CMakeLists.txt  wc.cpp
